--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#spring.datasource.url=jdbc:postgresql://52.76.120.204:5432/availaball-survey
-spring.datasource.url=jdbc:postgresql://localhost:5432/availaball_survey
+#spring.datasource.url=jdbc:postgresql://52.76.120.204:5432/availaballs
+spring.datasource.url=jdbc:postgresql://localhost:5432/availaballs
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.generate-ddl=true
