--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
+
+spring.http.multipart.max-file-size=10MB
+spring.http.multipart.max-request-size=10MB
