--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,10 @@ spring.jpa.generate-ddl=true
 
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
