--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.platform=postgres
 spring.jpa.show-sql=true
 
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 
 spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
